force-app/main/default/objects/Application_Dashboard__c/Application_Dashboard__c.object-meta.xml
<CustomObject>
    <description>Common dashboard object for all projects. 

Contains all fields desired to show in dashboard lists for users.</description>
    <label>Application Dashboard</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>