force-app/main/default/objects/Application_Dashboard__c/fields/ADM__c.field-meta.xml
<CustomField>
    <fullName>ADM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADM</label>
    <referenceTo>ADM__c</referenceTo>
    <relationshipLabel>Application Dashboards ADM</relationshipLabel>
    <relationshipName>Application_Dashboards_ADM</relationshipName>
    <type>Lookup</type>
</CustomField>