force-app/main/default/objects/Application_Dashboard__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Application Dashboards</relationshipLabel>
    <relationshipName>Application_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>