force-app/main/default/objects/Application_Dashboard__c/fields/Created_By_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Current_User__c</fullName>
    <formula>Case__r.Created_By_Current_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Current User</label>
    <type>Checkbox</type>
</CustomField>