force-app/main/default/objects/Application_Dashboard__c/fields/IIT__c.field-meta.xml
<CustomField>
    <fullName>IIT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IIT</label>
    <referenceTo>IIT__c</referenceTo>
    <relationshipLabel>Application Dashboards</relationshipLabel>
    <relationshipName>Application_Dashboards</relationshipName>
    <type>Lookup</type>
</CustomField>