force-app/main/default/objects/Application_Dashboard__c/fields/ITPIR_ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_ProjectName__c</fullName>
    <formula>IIT__r.ITPIR_ProjectName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>