force-app/main/default/objects/Application_Dashboard__c/fields/ITPT_AccountableSeniorLeader_User_c__c.field-meta.xml
<CustomField>
    <fullName>ITPT_AccountableSeniorLeader_User_c__c</fullName>
    <formula>IIT__r.ITPT_AccountableSeniorLeader_User__r.CommunityNickname</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountable Senior Leader</label>
    <type>Text</type>
</CustomField>