force-app/main/default/objects/Application_Dashboard__c/fields/ITPT_OverallRAG__c.field-meta.xml
<CustomField>
    <fullName>ITPT_OverallRAG__c</fullName>
    <formula>TEXT(IIT__r.ITPT_Overall_RAG__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall RAG</label>
    <type>Text</type>
</CustomField>