force-app/main/default/objects/Application_Dashboard__c/fields/ITPT_ProjectLead_User__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ProjectLead_User__c</fullName>
    <formula>IIT__r.ITPT_ProjectLead_User__r.CommunityNickname</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Lead</label>
    <type>Text</type>
</CustomField>