force-app/main/default/objects/Application_Dashboard__c/fields/ITPT_ProjectName_c__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ProjectName_c__c</fullName>
    <formula>IIT__r.ITPT_ProjectName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>