force-app/main/default/objects/Application_Dashboard__c/fields/ITPT_ResponsibleDirector_User_c__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ResponsibleDirector_User_c__c</fullName>
    <formula>IIT__r.ITPT_ResponsibleDirector_User__r.CommunityNickname</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible Director</label>
    <type>Text</type>
</CustomField>