force-app/main/default/objects/Application_Dashboard__c/fields/ITPT_SDLC__c.field-meta.xml
<CustomField>
    <fullName>ITPT_SDLC__c</fullName>
    <formula>TEXT( IIT__r.ITPT_SDLC_Phase__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDLC Phase</label>
    <type>Text</type>
</CustomField>