force-app/main/default/objects/Application_Dashboard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ITPT_ProjectLead_User__c</columns>
    <columns>ITPT_ResponsibleDirector_User_c__c</columns>
    <columns>ITPT_AccountableSeniorLeader_User_c__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>IIT__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>