force-app/main/default/objects/Application_Dashboard__c/listViews/BCR_Graphic_Group_Application_Dashboard.listView-meta.xml
<ListView>
    <fullName>BCR_Graphic_Group_Application_Dashboard</fullName>
    <filterScope>Queue</filterScope>
    <label>BCR Graphic Group</label>
    <queue>BCR_Graphic_Group</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>