force-app/main/default/objects/Application_Dashboard__c/listViews/DOHMH_EE_Default_Queue_Application_Dashboard.listView-meta.xml
<ListView>
    <fullName>DOHMH_EE_Default_Queue_Application_Dashboard</fullName>
    <filterScope>Queue</filterScope>
    <label>DOHMH EE Default Queue</label>
    <queue>DOHMH_EE_Default_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>