force-app/main/default/objects/Application_Dashboard__c/listViews/ITPIR_My_Requests.listView-meta.xml
<ListView>
    <fullName>ITPIR_My_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>ITPIR_ProjectName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type__c</field>
        <operation>equals</operation>
        <value>IT Project Intake Request</value>
    </filters>
    <filters>
        <field>Created_By_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ITPIR - My Requests</label>
</ListView>