force-app/main/default/objects/Application_Dashboard__c/listViews/ITPT_All_Projects.listView-meta.xml
<ListView>
    <fullName>ITPT_All_Projects</fullName>
    <columns>NAME</columns>
    <columns>ITPT_ProjectName_c__c</columns>
    <columns>ITPT_ProjectLead_User__c</columns>
    <columns>ITPT_ResponsibleDirector_User_c__c</columns>
    <columns>ITPT_AccountableSeniorLeader_User_c__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type__c</field>
        <operation>equals</operation>
        <value>IT Project Tracker</value>
    </filters>
    <label>ITPT - All Projects</label>
</ListView>