force-app/main/default/objects/Application_Dashboard__c/listViews/ITPT_My_Projects.listView-meta.xml
<ListView>
    <fullName>ITPT_My_Projects</fullName>
    <columns>NAME</columns>
    <columns>ITPT_ProjectName_c__c</columns>
    <columns>ITPT_ProjectLead_User__c</columns>
    <columns>ITPT_ResponsibleDirector_User_c__c</columns>
    <columns>Status__c</columns>
    <columns>ITPT_OverallRAG__c</columns>
    <columns>ITPT_SDLC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type__c</field>
        <operation>equals</operation>
        <value>IT Project Tracker</value>
    </filters>
    <filters>
        <field>Created_By_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>ITPT - My Projects</label>
</ListView>